Fix for missing margins on homepage

--- a/sass/home.scss
+++ b/sass/home.scss
@@ -45,7 +45,8 @@
 		}
 
 		@media screen and (min-width: 800px) {
-			margin: 0;
+			margin-left: 0;
+			margin-right: 0;
 		}
 	}
 }
